--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,12 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>5.8.2</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
 </project>
